[gd_scene load_steps=3 format=2]

[ext_resource path="res://imports/guns.png" type="Texture" id=1]
[ext_resource path="res://Weapons/shortgun.gd" type="Script" id=2]

[node name="shortgun" type="Node2D"]
script = ExtResource( 2 )
fireCD = 0.3

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( 6, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="GunSprite"]
position = Vector2( 3, -6.5 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.07

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
